Fixed z-index again!

--- a/src/Assets/CSS/App.css
+++ b/src/Assets/CSS/App.css
@@ -89,6 +89,7 @@ body{
     font-style: italic;
 }
 .audio-display-container{
+    z-index: -1;
     display: flex;
     flex-direction: column;
     justify-content: center;
